Another update for depon

--- a/ScienceWork/MatModel.tex
+++ b/ScienceWork/MatModel.tex
@@ -80,8 +80,10 @@
 В связи со стремительным ростом числа машин в современных городах, все больший интерес стала представлять теория потоков транспортных средств. Результаты ранних исследований по этой тематике собраны, например, в книгах \cite{Haight:1963, Drew:1968, Inose:1975}. В этих монографиях потоки машин моделируются с помощью традиционных стохастических потоков событий, весьма полно изученных в классической теории массового обслуживания. Однако классические модели не удается использовать для адекватного описания реальных потоков машин \cite{Bartlet:1963}. В работах
 \cite{Fedotkin:2009,Fedotkin:Kudryavcev:Rachinskaya:2010, Rachinskaya:Fedotkin:2011:1,Rachinskaya:Fedotkin:2011:2, Fedotkin:Kudryavcev:Rachinskaya:2011, Rachinskaya:Fedotkin:2012, Rachinskaya:Fedotkin:2013, Rachinskaya:Fedotkin:2014} предлагается учитывать не только вероятностные свойства последовательности моментов пересечения машинами так называемой виртуальной стоп-линии, но и определять свойства случайных конфигураций автомобилей на дороге. В указанных работах изучается возникновение так называемых пачек машин. Каждая пачка состоит из медленной головной машины и ожидающих возможности обгона машин за ней. Динамика длины пачки определяется возможностью обгона машинами из хвоста всей пачки. Другая динамика, обусловленная возможностью съезда машин с трассы, рассматривается в \cite{Afanasyeva:Bulinskaya:2013:1,Afanasyeva:Bulinskaya:2010,Afanasyeva:Bulinskaya:2013:2}. Основным объектом изучения в этих работах является плотность потока машин как функция от расстояния, на основе которой делаются выводы о пропускной способности перекрестков.
 
-Тандемы систем массового обслуживания широко используются при разработке компьютерных и коммуникационных систем, колл-центров, аварийных служб, при планировании их мощностей, производительности и последующей оптимизации работы. Также одним из важных приложений тандемов являются вопросы дорожного трафика автомобилей. Теория таких тандемов хорошо изучена, например, в работах \cite{Balsamo:2003, Gnedenko:Konig:1983, Perros:1994, Perros:1989} для простейших стационарных входных потоков и экспоненциального времени обслуживания. Модели с неэкспоненциальным временем обслуживания рассмотрены в \cite{Gomez:2002:1, Gomez:2002:2, Gomez:2002:3}. Более общие модели включают в себя так называемые BMAP (Batch Markovian Arrival Process) входные потоки, особенностью которых является наличие корреляции количества пришедших требований в различные моменты времени. Такие потоки рассмотрены, например, в работах \cite{Klimenok:Dudin:2005,Klimenok:Dudin:2004, Klimenok:2010, Klimenok:2011, Klimenok:2015}, где проведены аналитические и численные рассчеты условий стационарности двухфазных (тандемных) систем, в том числе с повторными попытками и нетерпеливостью запросов.
+Тандемы систем массового обслуживания широко используются при разработке компьютерных и коммуникационных систем, колл-центров, аварийных служб, при планировании их мощностей, производительности и последующей оптимизации работы. Также одним из важных приложений тандемов являются вопросы дорожного трафика автомобилей. 
+Одной из первых работ по этой тематике является работа \cite{Reich:1957}. В ней изучается распределение времени пребывания требования в системе с двумя обслуживающими устройствами, объединенных в тандем. Тандем означает, что после обслуживания заявки на первом устройстве, оно поступает в очередь на обслуживание вторым устройством. В предположении экспоненциальности промежутков времени между поступлением заявок в систему и экспоненциальности времени обслуживания, было получено, что время ожидания требования в очереди первого прибора независимо от его времени ожидания в очереди второго прибора. 
 
+Теория тандемов хорошо изучена, например, в работах \cite{Balsamo:2003, Gnedenko:Konig:1983, Perros:1994, Perros:1989} для простейших стационарных входных потоков и экспоненциального времени обслуживания. Модели с неэкспоненциальным временем обслуживания рассмотрены в \cite{Gomez:2002:1, Gomez:2002:2, Gomez:2002:3}. Более общие модели включают в себя так называемые BMAP (Batch Markovian Arrival Process) входные потоки, особенностью которых является наличие корреляции количества пришедших требований в различные моменты времени. Такие потоки рассмотрены, например, в работах \cite{Klimenok:Dudin:2005,Klimenok:Dudin:2004, Klimenok:2010, Klimenok:2011, Klimenok:2015}, где проведены аналитические и численные рассчеты условий стационарности двухфазных (тандемных) систем, в том числе с повторными попытками и нетерпеливостью запросов. Модель последовательных перекрестков с немгновенным перемещением машин между ними была впервые предложена в работах А.В.~Зорина (\cite{Zorine:2010, Zorine:2011:2, Zorine:2012}). В них динамика перемещения машин от одного перекрестка к другому задается бернулиевской случайной величиной: каждая машина с некоторой фиксированной вероятностью $0<p<1$ успевает доехать до следующего перекрестка и с противоположной вероятностью $1-p$ остается <<между>> ними.
 
 \section{Постановка задачи и построение математической модели}
 
@@ -111,7 +113,7 @@ ${}^3\Gamma=\Gamma^{\mathrm{\Rmnum{3}}} \cup \Gamma^{\mathrm{\Rmnum{4}}}$.
 
 Смена состояний обслуживающего устройства осуществляется по следующему правилу. Множество состояний $C_k = \{\Gamma^{(k,r)} \colon r=\overline{1,n_k}\}$ будем называть $k$-м циклом, $k=\overline{1,d}$ (Рис. \ref{GraphScheme}). Состояние вида $\Gamma^{(0,r)}$ будем называть состоянием продления, $r=\overline{1,n_0}$. Положим $r \oplus_k 1 = r+1$ для $r=\overline{1,n_k-1}$ и $r \oplus_k 1 = 1$ при $r=n_k$, $k = \overline{0,d}$. В цикле $C_k$ выделим подмножества $C_k^{\mathrm{O}}$ выходных, $C_k^{\mathrm{I}}$ входных и $C_k^{\mathrm{N}} = C_k \setminus (C_k^{\mathrm{O}} \cup C_k^{\mathrm{I}})$ нейтральных состояний. Тогда после состояния $\Gamma^{(k,r)} \hm\in C_k\setminus C_k^{\mathrm{O}}$ обслуживающее устройство переходит в состояние $\Gamma^{(k,r \oplus_k 1)}$ того же цикла $C_k$. При $\Gamma^{(k,r)}$ принадлежащем множеству $C_k^{\mathrm{O}}$ прибор переходит в состояние $\Gamma^{(k,r \oplus_k 1)}$, если число требований в очереди $O_3$ в момент переключения больше заданного порога $L$. В противном случае, то есть если число требований в очереди $O_3$ меньше либо равно $L$, новое состояние прибора будет состоянием продления $\Gamma^{(0,r_1)}$, где $r_1=h_1(\Gamma^{(k,r)})$ и $h_1(\cdot)$~--- заданное отображение множества $\bigcup\limits_{k=1}^d C_k^{\mathrm{O}}$ во множество $\{1,2,\ldots, n_0\}$. После состояния $\Gamma^{(0,r)}$ выбирается состояние того же вида $\Gamma^{(0,r_2)}$, если число требований в очереди $O_3$ меньше или равно $L$, где $r_2=h_2(r)$ и $h_2(\cdot)$~--- заданное отображение множества $\{1,2, \ldots, n_0\}$ на себя; в противном случае включается входное состояние $\Gamma^{(k,r_3)} \in C_k^{\mathrm{I}}$, где $\Gamma^{(k,r_3)}=h_3(r)$ и $h_3(\cdot)$~--- заданное отображение множества $\{1,2, \ldots, n_0\}$ на множество  $\bigcup\limits_{k=1}^d C_k^{\mathrm{I}}$. Считается, что все состояния продления $\Gamma^{(0,r)}$ принадлежат множеству ${}^2 \Gamma$, а также верны соотношения $C_k^\mathrm{O}\subset {}^2 \Gamma$ и $C_k^\mathrm{I}\subset {}^3 \Gamma$. Также будем предполагать, что все циклы имеют ровно одно входное и одно выходное состояние. И последним предположением является то, что все вершины продления образуют один цикл, то есть можем положить $h_2(r)=r\oplus_0 1$.
 
-\begin{figure}[hb]\centering
+\begin{figure}[h]\centering
 \includegraphics[scale=0.5]{GraphScheme3.png} 
 \caption{Класс графов переходов. Незакрашенные вершины являются выходными вершинами, красным отмечены входные вершины, черным --- нейтральные, наполовину закрашенным вершинам соответствуют состояния продления}
 \label{GraphScheme}
@@ -183,7 +185,7 @@ h_3(1)=\Gamma^{(2,1)}, \quad h_3(2)=\Gamma^{(3,1)}, \quad h_3(3)=\Gamma^{(4,1)} 
 Этим завершается построение числового примера.
 
 \subsection{Представление рассматриваемой системы обслуживания в виде кибернетической управляющей системы}
-Описанная в предыдущем разделе на содержательном уровне система массового обслуживания должна рассматриваться как кибернетическая управляющая система обслуживания (см. \cite{Zorine:2011}). Схема управляющей системы приведена на рис. \ref{SystemScheme}. На схеме присутствуют следующие блоки: 1) внешняя среда с одним состоянием; 2) входные полюса первого типа~--- входные потоки $\Pi_1$, $\Pi_2$, $\Pi_3$, $\Pi_4$; 3) входные полюса второго типа~--- потоки насыщения $\Pi_1^{\mathrm{\text{нас}}}$, $\Pi_2^{\mathrm{\text{нас}}}$, $\Pi_3^{\mathrm{\text{нас}}}$, $\Pi_4^{\mathrm{\text{нас}}}$; 4) внешняя память~--- очереди $O_1$, $O_2$, $O_3$, $O_4$; 5) устройство по переработкe информации внешней памяти~--- устройства по поддержанию дисциплины очереди $\delta_1$, $\delta_2$, $\delta_3$, $\delta_4$; 6) внутренняя память~--- обслуживающее устройство (ОУ); 7) устройство по переработке информации во внутренней памяти~--- граф смены состояний; 8) выходные полюса $\Pi_1^{\mathrm{\text{вых}}}$, $\Pi_2^{\mathrm{\text{вых}}}$, $\Pi_3^{\mathrm{\text{вых}}}$, $\Pi_4^{\mathrm{\text{вых}}}$. Координатой блока является номер этого блока на схеме. 
+Описанная в предыдущем разделе на содержательном уровне система массового обслуживания должна рассматриваться как кибернетическая управляющая система обслуживания (см. \cite{Zorine:2011:2}). Схема управляющей системы приведена на рис. \ref{SystemScheme}. На схеме присутствуют следующие блоки: 1) внешняя среда с одним состоянием; 2) входные полюса первого типа~--- входные потоки $\Pi_1$, $\Pi_2$, $\Pi_3$, $\Pi_4$; 3) входные полюса второго типа~--- потоки насыщения $\Pi_1^{\mathrm{\text{нас}}}$, $\Pi_2^{\mathrm{\text{нас}}}$, $\Pi_3^{\mathrm{\text{нас}}}$, $\Pi_4^{\mathrm{\text{нас}}}$; 4) внешняя память~--- очереди $O_1$, $O_2$, $O_3$, $O_4$; 5) устройство по переработкe информации внешней памяти~--- устройства по поддержанию дисциплины очереди $\delta_1$, $\delta_2$, $\delta_3$, $\delta_4$; 6) внутренняя память~--- обслуживающее устройство (ОУ); 7) устройство по переработке информации во внутренней памяти~--- граф смены состояний; 8) выходные полюса $\Pi_1^{\mathrm{\text{вых}}}$, $\Pi_2^{\mathrm{\text{вых}}}$, $\Pi_3^{\mathrm{\text{вых}}}$, $\Pi_4^{\mathrm{\text{вых}}}$. Координатой блока является номер этого блока на схеме. 
 
 Для задания информации блоков введем следующие величины и элементы, а также укажем множества их возможных значений. В качестве дискретной временной шкалы выберем последовательность $\tau_0=0$, $\tau_1$, $\tau_2$, $\ldots$ моментов смены состояния обслуживающего устройства. Обозначим $\Gamma_i$, $i\geqslant 1$, из множества $\Gamma$ состояние обслуживающего устройства в течение времени $\left(\tau_{i-1};\tau_i\right]$ и $\Gamma_0\in \Gamma$~--- в момент времени $\tau_0$, количество $\varkappa_{j,i} \in \mathbb{Z}_+ $, $i\geqslant 0$, требований в очереди $O_j$ в момент времени $\tau_i$, количество $\eta_{j,i} \in \mathbb{Z}_+$, $i\geqslant 0$, требований, поступивших в очередь $O_j$ по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, количество $\xi_{j,i} \in \mathbb{Z}_+$, $i\geqslant 0$, требований по потоку насыщения $\Pi^{\mathrm{\text{нас}}}_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, количество $\overline{\xi}_{j,i}\in \mathbb{Z}_+$, $i\geqslant 0$, реально обслуженных требований по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$; $j=\overline{1,4}$.
 
@@ -1714,6 +1716,7 @@ Statistical Inference» AMSA’2011, Novosibirsk: Publishing house of NSTU, 2011
 \bibitem{Afanasyeva:Bulinskaya:2010} Афанасьева~Л.Г., Булинская~Е.В. Математические модели транспортных систем, основанные на теории очередей // Труды Московского физико-технического института (государственного университета), 2010.~-- Т.~2~-- \No{}~4.~-- С.~6–21.
 \bibitem{Afanasyeva:Bulinskaya:2013:2} Afanasyeva~L.G., Bulinskaya~E.V. Asymptotic analysis of traffic lights performance under heavy traffic assumption // Methodology and Computing in Applied Probability, Springer, 2013.~-- V.~15.~-- \No{}~4.~-- P.~935–950.
 
+\bibitem{Reich:1957} Reich~E.  Waiting times when queues are in tandem // The Annals of Mathematical Statistics, 1957.~-- V.28.~-- \No{}3.~-- P.~768-773.
 \bibitem{Balsamo:2003} Balsamo~S., Persone~V.D.N., Inverardi~P. A review on queueing network models with finite capacity queues for software architectures performance prediction // Performance Evaluation 51, 2003.~-- P.~269–288.
 \bibitem{Gnedenko:Konig:1983} Gnedenko~B.W., Konig~D. Handbuch der Bedienungstheorie // Akademie Verlag, Berlin, 1983.
 \bibitem{Perros:1994} Perros~H.G.  Queueing networks with blocking, in: Exact and Approximate Solutions // Oxford University Press, New York.~-- 1994. 
@@ -1729,11 +1732,18 @@ Statistical Inference» AMSA’2011, Novosibirsk: Publishing house of NSTU, 2011
 \bibitem{Klimenok:2010} Клименок~В.И., Тарамин~О.С. Двухфазная система обслуживания с групповым марковским потоком и повторными вызовами // Автомат. и телемех.~-- 2010~-- \No~1.~-- P.~3–17 
 \bibitem{Klimenok:2011} Клименок~В.И., Тарамин~О.С. Двухфазная система $GI/PH/1 \to /PH/1/0GI/PH/1 \to /PH/1/0$ с потерями // Автомат. и телемех, 2011.~-- \No{}~5.~-- P.~113–126.
 \bibitem{Klimenok:2015} Клименок~В.И., Савко~Р.Ч. Двухфазная система с повторными попытками и нетерпеливостью запросов // Автомат. и телемех., 2015.~-- \No{}~8.~-- P.~78–93. 
-
-
-\bibitem{Zorine:2013:1} Zorine~A.V. Study of queues’ sizes in tandem intersections under cyclic control in random environment // Modern Probabilistic Methods for Analysis of Telecommunication Networks. Communications in Computer and Information Science, 2013.~-- v.~356.~-- P.~206--215.
+\bibitem{Zorine:2010} Zorine~.A.V. Stability of a tandem queueing system with delayed Bernoulli transition of customers // Abstracts of international conference "Modern stochastics: theory and applications II" Dedicated to the anneversaries of prominent Ukranian scientists: Anatolij Skorokhod, Volodymyr Korolyuk and Igor Kovalenko, Kyiv, Ukrain, September 7-11, 2010.~-- P.~76.
+\bibitem{Zorine:2011:1} Зорин~А.В. Кибернетический подход к построению и анализу математической модели тандема двух перекрестков // Проблемы теоретической кибернетики. Материалы XVI Международной конференции (Нижний Новгород, 20-25 июня 2011 г.) / Под ред. Ю.И. Журавлева. Нижний Новгород: Изд-во Нижегородского университета, 2011.~-- С.~179-183.
+\bibitem{Zorine:2011:2} Зорин~А.В. Устойчивость тандема систем обслуживания с бернуллиевским немгновенным перемещением требований // Теория вероятностей и математическая статистика, вып. 84, 2011.~-- С.~163-176.
+\bibitem{Zorine:2012} Zorine~A.V. Stability of a tandem of queueing systems with Bernoulli noninstantaneous transfer of customers // Theor. Probability and Math. Statist., 2012.~-- V.84.~-- P.~173-188.
+\bibitem{Zorine:2013:1} Zorine~A.V. Study of queues’ sizes in tandem intersections under cyclic control in random environment // Modern Probabilistic Methods for Analysis of Telecommunication Networks. Communications in Computer and Information Science, 2013.~-- V.~356.~-- P.~206-215.
 \bibitem{Zorine:2013:2} Zorine~A.V. On the conditions for the existence of a stationary mode in a tandem of queuing systems with cyclic control in a random environment // Automatic Control and Computer Sciences, 2013.~-- v.~47.~-- P.~183-191.
-\bibitem{Zorine:2011} Зорин~А.В. Устойчивость тандема систем обслуживания с бернуллиевским немгновенным перемещением требований // Теория вероятностей и математическая статистика.~-- 2011.~-- Вып.~84.~-- С.~163-176.
+Зорин А.В. Об условиях существования стационарного режима в тандеме систем массового обслуживания с цикличнским управлением в случайной среде // Автоматика и вычислительная техника, 2013, \No{}~4, С. 28-39.
+
+\bibitem{Kocheganov:2015:1} Кочеганов~В.М., Зорин~А.В. Вероятностная модель тандема систем массового обслуживания с циклическим управлением с продлением // Теория вероятностей, случайные процессы, математическая статистика и приложения: материалы Междунар. науч. конф., посвящ. 80-летию проф., д-ра физ.-мат. наук Г.А. Медведева, Минск, 23–26 февр. 2015.~-- С.~94–99.
+\bibitem{Kocheganov:2015:2} Кочеганов~В.М., Зорин~А.В. Дискретная модель колебания длины низкоприоритетной очереди в тандеме систем массового обслуживания при циклическом алгоритме с продлением // Дискретные модели в теории управляющих систем: IX Международная конференция, Москва и Подмосковье, 20–22 мая 2015.~-- С.~126–129.
+\bibitem{Kocheganov:2015:3} Kocheganov~V.M., Zorine~A.V. Low-priority queue fluctuations in tandem of queueing systems under cyclic control with prolongations // Распределенные компьютерные и телекоммуникационнные сети: управление, вычисление, связь (DCCN-2015) : материалы Восемнадцатой междунар. науч. конфер., 19–22 окт. 2015 г., Москва: / Ин-т проблем упр. им. В.А. Трапезникова Рос. акад. наук ; под общ. ред. В.М. Вишневского. —М.: ИПУ РАН, 2015.~-- С.~517–524.
+
 \bibitem{Fedotkin:1988} Федоткин~М.А. Оптимальное управление конфликтными потоками и маркированные точечные процессы с выделенной дискретной компонентой. 1 // Литовский математический сборник, 1988.~-- Т.~28.~-- \No{}~4.~-- С.~783-784.
 \bibitem{Fedotkin:1989} Федоткин~М.А. Оптимальное управление конфликтными потоками и маркированные точечные процессы с выделенной дискретной компонентой. 2 // Литовский математический сборник, 1989.~-- Т.~29.~-- \No{}~1.~-- С.~148-159.
 \bibitem{Fedotkin:1998} Федоткин~М.А. Нелокальный способ задания управляемых случайных процессов // Математические вопросы кибернетики.~--- М.: Наука, 1998.~-- Вып.~7.~-- С.~333-344.
