Introduction for depon is done

--- a/ScienceWork/MatModel.tex
+++ b/ScienceWork/MatModel.tex
@@ -5,7 +5,7 @@
 \usepackage[onehalfspacing]{setspace}
 \RequirePackage{caption}
 \usepackage{graphicx}
-
+\usepackage{showkeys}
 %\newcommand*{\hm}[1]{#1\nobreak\discretionary{}%
 %{\hbox{$\mathsurround=0pt #1$}}{}}
 
@@ -80,10 +80,14 @@
 В связи со стремительным ростом числа машин в современных городах, все больший интерес стала представлять теория потоков транспортных средств. Результаты ранних исследований по этой тематике собраны, например, в книгах \cite{Haight:1963, Drew:1968, Inose:1975}. В этих монографиях потоки машин моделируются с помощью традиционных стохастических потоков событий, весьма полно изученных в классической теории массового обслуживания. Однако классические модели не удается использовать для адекватного описания реальных потоков машин \cite{Bartlet:1963}. В работах
 \cite{Fedotkin:2009,Fedotkin:Kudryavcev:Rachinskaya:2010, Rachinskaya:Fedotkin:2011:1,Rachinskaya:Fedotkin:2011:2, Fedotkin:Kudryavcev:Rachinskaya:2011, Rachinskaya:Fedotkin:2012, Rachinskaya:Fedotkin:2013, Rachinskaya:Fedotkin:2014} предлагается учитывать не только вероятностные свойства последовательности моментов пересечения машинами так называемой виртуальной стоп-линии, но и определять свойства случайных конфигураций автомобилей на дороге. В указанных работах изучается возникновение так называемых пачек машин. Каждая пачка состоит из медленной головной машины и ожидающих возможности обгона машин за ней. Динамика длины пачки определяется возможностью обгона машинами из хвоста всей пачки. Другая динамика, обусловленная возможностью съезда машин с трассы, рассматривается в \cite{Afanasyeva:Bulinskaya:2013:1,Afanasyeva:Bulinskaya:2010,Afanasyeva:Bulinskaya:2013:2}. Основным объектом изучения в этих работах является плотность потока машин как функция от расстояния, на основе которой делаются выводы о пропускной способности перекрестков.
 
-Тандемы систем массового обслуживания широко используются при разработке компьютерных и коммуникационных систем, колл-центров, аварийных служб, при планировании их мощностей, производительности и последующей оптимизации работы. Также одним из важных приложений тандемов являются вопросы дорожного трафика автомобилей. 
-Одной из первых работ по этой тематике является работа \cite{Reich:1957}. В ней изучается распределение времени пребывания требования в системе с двумя обслуживающими устройствами, объединенных в тандем. Тандем означает, что после обслуживания заявки на первом устройстве, оно поступает в очередь на обслуживание вторым устройством. В предположении экспоненциальности промежутков времени между поступлением заявок в систему и экспоненциальности времени обслуживания, было получено, что время ожидания требования в очереди первого прибора независимо от его времени ожидания в очереди второго прибора. 
+Тандемы систем массового обслуживания широко используются при моделировании компьютерных и коммуникационных систем, колл-центров, аварийных служб, при планировании их мощностей, производительности и последующей оптимизации работы. 
+Тандем является простейшей сетью из нескольких приборов, в которой заявка после обслуживания на одном устройстве  поступает в очередь на обслуживание следующим устройством.
+Одной из первых работ, посвященная тандемам систем массового обслуживания, является работа \cite{Reich:1957}. В ней изучается распределение времени пребывания требования в системе с двумя обслуживающими устройствами. В предположении, что промежутки времени между поступлением заявок в систему и времени обслуживания независимы и имею экпоненциальные законы распределения, было показано, что время ожидания требования в очереди первого прибора стохастически не зависит от его времени ожидания в очереди второго прибора. 
 
-Теория тандемов хорошо изучена, например, в работах \cite{Balsamo:2003, Gnedenko:Konig:1983, Perros:1994, Perros:1989} для простейших стационарных входных потоков и экспоненциального времени обслуживания. Модели с неэкспоненциальным временем обслуживания рассмотрены в \cite{Gomez:2002:1, Gomez:2002:2, Gomez:2002:3}. Более общие модели включают в себя так называемые BMAP (Batch Markovian Arrival Process) входные потоки, особенностью которых является наличие корреляции количества пришедших требований в различные моменты времени. Такие потоки рассмотрены, например, в работах \cite{Klimenok:Dudin:2005,Klimenok:Dudin:2004, Klimenok:2010, Klimenok:2011, Klimenok:2015}, где проведены аналитические и численные рассчеты условий стационарности двухфазных (тандемных) систем, в том числе с повторными попытками и нетерпеливостью запросов. Модель последовательных перекрестков с немгновенным перемещением машин между ними была впервые предложена в работах А.В.~Зорина (\cite{Zorine:2010, Zorine:2011:2, Zorine:2012}). В них динамика перемещения машин от одного перекрестка к другому задается бернулиевской случайной величиной: каждая машина с некоторой фиксированной вероятностью $0<p<1$ успевает доехать до следующего перекрестка и с противоположной вероятностью $1-p$ остается <<между>> ними.
+Основные результаты теории тандемов в случае простейших стационарных входных потоков и экспоненциального времени обслуживания широко представлены, например, в работах \cite{Balsamo:2003, Gnedenko:Konig:1983, Perros:1994, Perros:1989}. Модели с неэкспоненциальным временем обслуживания рассмотрены в \cite{Gomez:2002:1, Gomez:2002:2, Gomez:2002:3}. Более общие модели включают в себя так называемые BMAP (Batch Markovian Arrival Process) входные потоки, особенностью которых является наличие корреляции количества пришедших требований в различные моменты времени. Такие потоки рассмотрены, например, в работах \cite{Klimenok:Dudin:2005,Klimenok:Dudin:2004, Klimenok:2010, Klimenok:2011, Klimenok:2015}, где проведены аналитические рассчеты условий стационарности и изучено поведение некоторых характеристик обслуживания для некоторых частных видов входных потоков и распределений времени обслуживания для двухфазных (тандемных) систем, в том числе с повторными попытками и нетерпеливыми требованиями. 
+Модель последовательных перекрестков с немгновенным перемещением машин между ними была впервые предложена в работах А.В.~Зорина (\cite{Zorine:2010, Zorine:2011:2, Zorine:2012}). В них динамика перемещения машин от одного перекрестка к другому задается бернулиевской случайной величиной: каждая машина с некоторой фиксированной вероятностью $0<p<1$ успевает доехать до следующего перекрестка и с противоположной вероятностью $1-p$ остается <<между>> ними.
+
+Целью настоящей работы является расширение тандемных моделей для задач исследования транспортных сетей. 
 
 \section{Постановка задачи и построение математической модели}
 
@@ -1705,7 +1709,7 @@ $$
 
 \bibitem{Fedotkin:Kudryavcev:Rachinskaya:2010} Fedotkin~M.A. Kudryavtsev~E.V., Rachinskaya~M.A.  About correctness of probabilistic models of traffic flows dynamics on a motorway // Proceedings 36 of International Workshop «Distributed computer and communication networks» (DCCN-2010), Moscow, 2010.~-- P.86-93.
 \bibitem{Rachinskaya:Fedotkin:2011:1} Fedotkin~M.A., Rachinskaya~M.A. Investigation of Traffic Flows Characteristics in Case of the Small Density // Queues: Flows, Systems, Networks. Proceedings of the International Conference «Modern Probabilistic Methods for Analysis and Optimization of Information and Telecommunication Networks». Minsk: BSU-RIVH, 2011.~-- \No{}~21.~-- P.~82-87.
-\bibitem{Rachinskaya:Fedotkin:2011:2} Федоткин~М.А., Рачинская~М.А. Исследование математической модели трафика автомобилей на основе подхода Ляпунова-Яблонского // Материалы XVI Международной конференции «Проблемы теоретической кибернетики», Нижний Новгород: Изд-во Нижегородского госуниверситета, 2011.~-- С.~508-512.
+\bibitem{Rachinskaya:Fedotkin:2011:2} Федоткин~М.А., Рачинская~М.А. Исследование математической модели трафика автомобилей на основе подхода Ляпунова~-- Яблонского // Материалы XVI Международной конференции «Проблемы теоретической кибернетики», Нижний Новгород: Изд-во Нижегородского госуниверситета, 2011.~-- С.~508-512.
 \bibitem{Fedotkin:Kudryavcev:Rachinskaya:2011} Fedotkin~M.A., Kudryavtcev~E.V., Rachinskaya~M.A. Simulation and Research of Probabilistic Regularities in Motion of Traffic Flows // Proceedings of the International Workshop «Applied Methods of Statistical Analysis. Simulations and
 Statistical Inference» AMSA’2011, Novosibirsk: Publishing house of NSTU, 2011.~-- P.~11-18.
 \bibitem{Rachinskaya:Fedotkin:2012} Рачинская~М.А., Федоткин~М.А. Изучение характеристик потока машин в условиях малой плотности // Нижегородский государственный университет им.~Н.И.~Лобачевского, Нижний Новгород, 2012.~-- 36~с.~-- Деп. в ВИНИТИ 26.01.12, \No{}~27-В2012.
